# tap-singer-jsonl

./: .gitignore  MANIFEST.in  README.md  example_config.json  meltano.yml  pyproject.toml  setup.py
tap_singer_jsonl/: __init__.py  utils.py
