[tool.poetry]
name = "tap-singer-jsonl"
version = "0.1.0"
description = ""
authors = ["Ken Payne <ken@meltano.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tap_singer_jsonl"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
singer-sdk = "^0.16.0"
smart-open = "^6.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-singer-jsonl = 'tap_singer_jsonl:main'